# rfmt

./: .gitignore  Cargo.toml  README.md
examples/: parsing.rs
src/: grammar.pest  lib.rs
src/parser/: mod.rs
